--- a/pom.xml
+++ b/pom.xml
@@ -11,13 +11,13 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.2.6.RELEASE</version>
+    <version>2.6.3</version>
   </parent>
 
   <properties>
-    <java.version>14</java.version>
-    <spring.security.version>5.3.1.RELEASE</spring.security.version>
-    <junit.version>4.13</junit.version>
+    <java.version>17</java.version>
+    <spring.security.version>5.6.1</spring.security.version>
+    <junit.version>4.13.2</junit.version>
   </properties>
 
   <dependencies>
@@ -67,10 +67,9 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version>
+        <version>3.9.0</version>
         <configuration>
           <release>${java.version}</release>
-          <compilerArgs>--enable-preview</compilerArgs>
         </configuration>
       </plugin>
 
@@ -82,10 +81,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.0.0-M4</version>
-        <configuration>
-          <argLine>--enable-preview</argLine>
-        </configuration>
+        <version>3.0.0-M5</version>
       </plugin>
 
     </plugins>
