--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -14,6 +14,12 @@ authentication:
       password: admin123!
       roles: USER,ADMIN
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "health,metric,prometheus"
+
 server:
   port: 5000
 
